[package]
name = "facade"
version = "0.9.0"
edition = "2024"

[dependencies]
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
reqwest = { version = "0.12", features = ["default"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
serde_json = "1"
thiserror = "2.0"
scraper = "0.23"
url = "2"

[dev-dependencies]
rand = "0.9"